# FTP-Quick

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: main.rs  server.rs
src/sftp/: session.rs  session_state.rs
src/sftp/handlers/: dir_ops.rs  file_ops.rs  mod.rs  stat_ops.rs
src/sftp/utils/: file_info.rs  metadata.rs  mod.rs  path_resolver.rs
src/ssh/: server.rs  session.rs
ui/: appwindow.slint
