[package]
name = "ftp-quick"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = "1.15.1"
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
libunftp = "0.23"
unftp-sbe-fs = "0.4"
unftp-auth-jsonfile = "0.4"
russh = "0.57"
russh-sftp = "2.1.1"
async-tftp = "0.4.2"
rfd = "0.17"
log = "0.4.29"
env_logger = "0.11.9"


[build-dependencies]
slint-build = "1.15.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true